--- a/main.css
+++ b/main.css
@@ -1,6 +1,27 @@
 .list-item{
 	padding: 0.25em 0.5em;
+	display: inline-block;
 }
 .image{
 	width: 100px;
+}
+
+.background, .content{
+	position: absolute;
+	top:0;
+	left:0;
+}
+.background{
+	/*background: blue;*/
+	width: 100%;
+	height: 100%;
+	/*background-image: url('images/originals/015.jpg');*/
+	background-repeat: no-repeat;
+}
+.background-image{
+	width: 100%;
+}
+.sidebar{
+	background-color: rgba(50, 50, 50, 0.8);
+	border-right: 1px solid #000;
 }
